# simsat

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  THIRD-PARTY-NOTICES.txt
.cargo/: config.toml
.github/scripts/: python-wheel-smoke.py
.github/workflows/: ci.yml  release.yml
build-support/: windows_version.rs
crates/simsat/: Cargo.toml  build.rs
crates/simsat/assets/: bluemarble_manifest.json
crates/simsat/assets/abi_srf/: GOES-R_ABI_FM4_SRF_CWG_ch13.txt
crates/simsat/examples/: export_animation.rs  ingest_grib_file.rs  render_frame.rs  render_granulation_ab.rs  render_ir.rs  ssb_precision_audit.rs  ssb_preview.rs
crates/simsat/src/: animation.rs  api.rs  asset_pack.rs  atmosphere.rs  bluemarble.rs  bricks.rs  camera.rs  cloud_delta_flux.rs  clouds.rs  derived.rs  fractional_clouds.rs  frame.rs  geocolor.rs  horizon.rs  ingest.rs  ingest_grib.rs  instrument_footprint.rs  ir.rs  ir_enhance.rs  lib.rs  log.rs  optics.rs  platform.rs  precision_audit.rs  render.rs  sandwich.rs  solar.rs  store_out.rs  thermal_sensor.rs  topdown.rs  web_layer.rs  wv.rs
crates/simsat/src/gpu/: mod.rs
crates/simsat/src/gpu/shaders/: clouds.wgsl  sun_od.wgsl  surface.wgsl
crates/simsat/tests/: fixture_ingest.rs  fixture_ingest_grib.rs  fixture_staleness.rs
crates/simsat_py/: Cargo.toml  README.md  pyproject.toml
crates/simsat_py/src/: lib.rs
crates/simsat_py/tests/: test_solar_elevation_grid.py
crates/simsat_studio/: Cargo.toml  build.rs
crates/simsat_studio/src/: main.rs  pipeline.rs  presets.rs  settings.rs
docs/: v017-render-intent.md  v018-recommended-presets.md  v020-postlight-surface-toe.md
experiments/cloud-closure-fit/: .gitignore  README.md  analyze_stage1.py  cloud_closure_fit.py  generate_stage2_requests.py  run-request-grid.ps1
experiments/cloud-closure-fit/fixtures/: stage0-comparison-v1.csv  stage0-self-checks-v1.json  stage0-summary-v1.json  stage1-exact-join-v1.csv  stage1-oracle-manifest-v1.csv  stage1-request-grid-v1.csv  stage1-self-checks-v1.json  stage1-summary-v1.json  stage2-request-grid-v1.csv  stage2-request-summary-v1.json
experiments/cuda-cloud-oracle/: .gitignore  README.md  baseline-rtx5090.csv  run_baseline.ps1  run_stage2_grid.py  run_stage2_remediation.py  run_stage2_validation.ps1  self-test-rtx5090.json  slab_oracle.cu  stage2-remediation-request-v1.csv  stage2-remediation-results-rtx5090-v1-summary.json  stage2-remediation-results-rtx5090-v1.jsonl  stage2-results-rtx5090-v1-summary.json  stage2-validation-rtx5090-v1.json
experiments/delta-two-stream/: README.md  delta_two_stream.py
experiments/delta-two-stream/fixtures/: stage0-self-checks-v1.json  stage0-slab-flux-v1.csv
experiments/mcd43-nbar/: README.md  mcd43_probe.py
experiments/mcd43-nbar/fixtures/: mcd43-a2026191-maine-probe-20260711.json
experiments/surface-response/: README.md  surface_response_lab.py
experiments/surface-response/fixtures/: stage0-surface-response-checks-v1.txt  stage0-surface-response-summary-v1.json  stage0-surface-response-v1.csv
scripts/: extract-gridsat-visible-reference.py  fetch-goes-abi-reference.py  low-sun-1974.example.json  low-sun-visual-qa.py  simsat-validate-goes.py
